# polytape

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/: polytape-admin.service  polytape-admin.tmpfiles.conf  polytape-control.path  polytape-control.service  polytape-control.sh  polytape-refresh.service  polytape-refresh.sh  polytape-refresh.timer  polytape.service
polytape/: __init__.py  __main__.py  app.py  cli.py  config.py  envelope.py  gamma.py  mock.py  supervisor.py  writer.py
polytape/admin/: __init__.py  app.py  control.py  download.py  extractor.py  page.py  reader.py  registry.py
polytape/monitor/: __init__.py  __main__.py  control.py  demo.py  index.html  reader.py  server.py
polytape/streams/: __init__.py  base.py  clob.py  discover.py  rtds.py
polytape/viewer/: __init__.py  api.py  book.py  cli.py  config.py  metrics.py  reader.py  reconstruct.py  server.py  store.py
polytape/viewer/static/: index.html
polytape/viewer/static/css/: app.css
polytape/viewer/static/js/: api.js  depthchart.js  gauges.js  ladder.js  live.js  main.js  metrics.js  store.js  tape.js  timeseries.js  util.js
scripts/: backfill_series_comments.py  build_tensor.py  extract_raw.py  list_wc_matches.py  make_demo_capture.py  polytape_to_parquet.py  seed_meta_counts.py  validate_capture.py
tests/: conftest.py  test_admin.py  test_admin_download.py  test_admin_extractor.py  test_admin_registry.py  test_app.py  test_config.py  test_control.py  test_controls.py  test_dashboard_assets.py  test_discover.py  test_download_naming.py  test_envelope.py  test_gamma.py  test_mock.py  test_monitor.py  test_seed_meta.py  test_streams.py  test_supervisor.py  test_writer.py
tests/viewer/: conftest.py  test_api.py  test_book.py  test_metrics.py  test_reader.py  test_reconstruct.py  test_server.py  test_store.py
