[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytape"
version = "0.1.0"
description = "Record Polymarket's public real-time comment and order-book feeds to timestamped JSONL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "polytape contributors" }]
keywords = ["polymarket", "websocket", "order-book", "recorder", "jsonl", "research"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "websockets>=12.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  # Pinned exactly: ruff's lint AND format output can shift between releases, so a
  # floating version would make CI nondeterministic. ruff also replaces black.
  "ruff==0.15.20",
  # The admin endpoint tests use FastAPI's TestClient; install it so they run in CI.
  "fastapi>=0.110",
]
admin = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
polytape = "polytape.cli:main"
polytape-admin = "polytape.admin.app:main"
polytape-monitor = "polytape.monitor.__main__:main"
polytape-view = "polytape.viewer.cli:main"

[project.urls]
Homepage = "https://github.com/polytape/polytape"
Source = "https://github.com/polytape/polytape"

[tool.hatch.build.targets.wheel]
packages = ["polytape"]
# Ship the monitor dashboard HTML (a non-Python asset) inside the wheel so the
# monitor works from an installed wheel as well as the source tree.
artifacts = ["polytape/monitor/index.html"]

# Ship the viewer's static frontend (HTML/CSS/JS) inside the wheel so the
# `polytape-view` UI works from an installed wheel as well as the source tree.
[tool.hatch.build.targets.wheel.force-include]
"polytape/viewer/static" = "polytape/viewer/static"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"polytape/admin/page.py" = ["E501"]  # embedded HTML/CSS/JS asset, not source

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
